initial upgrade to tomcat10 (jakartaee-migration-1.0.7.jar src src) * tomcat10 requires jakarta * jakarta requires spring 6 * spring 6 requires spring boot 3 * spring 6 requires hibernate 6 * spring 6 requires jdk17 * sprint 6 requires migration of configuration + update other dependencies + adjust form multipart handling